--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
   "dependencies": {
     "backbone": "^1.4.0",
     "jquery": "^1.11.0",
+    "plotly.js": "^1.58.4",
+    "react-plotly.js": "^2.5.1",
     "underscore": "^1.9.1"
   }
 }
