--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "jquery": "^1.11.0",
     "plotly.js": "^1.58.4",
     "react-plotly.js": "^2.5.1",
+    "react-select": "^4.3.0",
     "underscore": "^1.9.1"
   }
 }
