--- a/package.json
+++ b/package.json
@@ -27,11 +27,9 @@
     "path-exists": "2.1.0",
     "postcss-loader": "0.8.0",
     "prettier": "0.22.0",
-    "react": "15.6.2",
-    "react-addons-shallow-compare": "15.6.2",
-    "react-addons-test-utils": "15.6.2",
+    "react": "16.8.x",
     "react-dev-utils": "0.2.1",
-    "react-dom": "15.6.2",
+    "react-dom": "16.8.x",
     "react-router": "3.0.2",
     "react-transform-hmr": "1.0.4",
     "recursive-readdir": "2.1.0",
